Swagger doc update
